--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,4 @@
-# Created by https://www.gitignore.io/api/macos,matlab,osx
-
-### macOS ###
-*.DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two \r
-Icon
-# Thumbnails
-._*
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
+# Created by https://www.gitignore.io/api/matlab
 
 ### Matlab ###
 ##---------------------------------------------------
@@ -45,10 +20,3 @@ slprj/
 
 # Session info
 octave-workspace
-
-
-### OSX ###
-# Icon must end with two \r
-# Thumbnails
-# Files that might appear in the root of a volume
-# Directories potentially created on remote AFP share
